# flatbuffers-build

./: Cargo.toml  LICENSE  README.md  build.rs  new_version.py  requirements.txt
.github/: release_notes.template
.github/workflows/: ci.yaml  release.yaml
flatbuffers-build-example/: Cargo.toml  build.rs
flatbuffers-build-example/schemas/: example.fbs
flatbuffers-build-example/src/: main.rs
flatbuffers-example/: Cargo.toml  build.rs  example.fbs  weapon.fbs
flatbuffers-example/src/: .gitignore  main.rs
src/: lib.rs
