[package]
name = "flatbuffers-gen"
version = "0.1.0+flatc-23.5.26"
edition = "2021"
license = "MIT"
categories = ["encoding"]
description = "A library that facilitates generating flatbuffer code from Rust"
authors = ["Ricardo Delfin"]
readme = "README.md"

[dependencies]
thiserror = "1"

[features]
vendored = []

[workspace]
members = [
    "flatbuffers-example",
]

[build-dependencies]
anyhow = "1"
cmake = "0.1"
flate2 = "1"
hex = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
ring = "0.17.8"
tar = "0.4"
tempfile = "3"
