[package]
name = "flatbuffers-build"
version = "0.2.1+flatc-24.3.25"
edition = "2021"
license = "MIT"
categories = ["encoding"]
keywords = ["flatbuffers", "encoding", "codegen"]
description = "A library that facilitates generating flatbuffer code from Rust"
authors = ["Ricardo Delfin"]
readme = "README.md"
repository = "https://github.com/rdelfin/flatbuffers-build"

[dependencies]
thiserror = "1"

[target.'cfg(windows)'.dependencies]
junction = "1.2.0"

[features]
vendored = ["anyhow", "cmake", "flate2", "hex", "reqwest", "ring", "tar", "tempfile"]

[build-dependencies]
anyhow = { version = "1", optional = true }
cmake = { version = "0.1", optional = true }
flate2 = { version = "1", optional = true }
hex = { version = "0.4", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }
ring = { version = "0.17.12", optional = true }
tar = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }
