[package]
name = "flatbuffers-build-example"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["encoding"]
keywords = ["flatbuffers", "encoding", "codegen"]
description = "Examples for the flatbuffers-build crate"
authors = ["Ricardo Delfin"]
readme = "../README.md"
repository = "https://github.com/rdelfin/flatbuffers-build"

[dependencies]
anyhow = "1"
flatbuffers = "=24.3.25"

[build-dependencies]
flatbuffers-build = { version = "0.1.2", path = "..", features = ["vendored"] }
