[package]
name = "flatbuffers-build-example"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["encoding"]
keywords = ["flatbuffers", "encoding", "codegen"]
description = "Examples for the flatbuffers-build crate"
authors = ["Ricardo Delfin"]
readme = "../README.md"
repository = "https://github.com/rdelfin/flatbuffers-build"

[dependencies]
anyhow = "1"
flatbuffers = "=25.12.19"

[build-dependencies]
flatbuffers-build = { version = "0.2.4", path = "..", features = ["vendored"] }
