[package]
name = "flatbuffers-example"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["encoding"]
keywords = ["flatbuffers", "encoding", "codegen"]
description = "Examples for the flatbuffers-build crate"
authors = ["Ricardo Delfin"]
readme = "../README.md"
repository = "https://github.com/rdelfin/flatbuffers-build"

[dependencies]
anyhow = "1"
flatbuffers = "=23.5.26"

[build-dependencies]
flatbuffers-build = { path = "..", features = ["vendored"] }
